kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-example-deployment
  labels:
    app: react-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-example
  template:
    metadata:
      labels:
        app: react-example
    spec:
      containers:
      - name: react-example
        image: popmaster/react-example:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
