kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-example-service
spec:
  selector:
    app: react-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
