kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-example-ingress
  
spec:
  ingressClassName: react-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: react-example-service
            port:
              number: 80
